<resources>
    <string name="app_name">AEM</string>
    <string name="expense_management_title_string">Expense Management</string>
    <string name="alpha_tech_by_signature">by alpha technologies</string>
    <string name="page_title">Page Title</string>
    <string name="date">Date</string>
    <string name="add_account">add_account</string>
    <string name="accounts">Accounts</string>
    <string name="transactions">Transactions</string>
    <string name="expenses">Expenses</string>
    <string name="analyze">Analysis</string>
    <string name="delete">delete</string>
    <string name="account_name">Account Name</string>
    <string name="id">Id:#</string>
    <string name="dateFormat">mm/dd/yyyy</string>
    <string name="categoryArray">[category,category2,category3]</string>
    <string name="dollarAmount">$00.00</string>
    <string name="merchant">Merchant</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="_000_00">$000.00</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Add</string>
    <string name="sumDialogTitle">Import Expenses</string>
    <string name="barGraphTitle">Visualization</string>
    <string name="date_range">Date Range</string>
    <string name="category">Category</string>
    <string name="reset">Reset</string>
    <string name="category_totals">Category Totals</string>
    <string name="monthly_breakdown">Monthly Breakdown</string>
</resources>