<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <TextView
        android:layout_marginStart="10sp"
        android:id="@+id/transaction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/merchant"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_marginStart="10sp"
        android:id="@+id/transaction_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateFormat"
        android:textAlignment="textStart" />

    <TextView
        android:layout_marginEnd="10sp"
        android:id="@+id/transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/dollarAmount"
        android:textAlignment="textEnd"
        android:textSize="16sp" />

    <TextView
        android:layout_marginEnd="10sp"
        android:id="@+id/transaction_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoryArray"
        android:textAlignment="textEnd" />

    <TextView
        android:layout_marginEnd="5sp"
        android:id="@+id/transaction_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textAlignment="textEnd"
        android:textSize="11sp" />
</LinearLayout>